# huebot-dioxus

./: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  Makefile  README.md  flake.nix  hue-openapi.yaml  rust-toolchain.toml  tailwind.css
assets/: tailwind.css
assets/styling/: animations.css  navbar.css
src/: main.rs
src/components/: activity.rs  clock.rs  echo.rs  hero.rs  mod.rs  pulse.rs  sensor.rs  sensor_data_graph.rs  sparkline.rs
src/hue/: client.rs  eventcache.rs  events.rs  mod.rs  models.rs  tests.rs
src/views/: blog.rs  event_log.rs  graphs.rs  home.rs  mod.rs  navbar.rs  sensors.rs
