[package]
name = "huebot"
version = "0.1.0"
authors = ["Iain Calder <iain.calder@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"], optional = true }
futures = "0.3"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
reqwest = { version = "0.13", features = ["json", "query", "stream"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
regress = "0.4.1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros"], optional = true }
gloo-timers = { version = "0.3.0", features = ["futures"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
web-sys = { version = "0.3", features = ["Window", "Document", "EventTarget", "Event"] }
gloo-events = "0.2"
tracing = "0.1"
dioxus-logger = "0.7.1"

[features]
default = ["web", "server"]
# The feature that are only required for the web build target should be optional and only enabled in the web feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = ["dioxus/server", "dep:tokio", "dep:sqlx"]
